--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <body>
     <section class="container">
       <section>
+        <div>
+          <input id="search-input" type="text"/>
+          <button onclick="getNewsByKeyword()">search</button>
+        </div>
         <div class="head-line">
           <svg viewBox="0 0 184 25" fill="#000">
             <path
@@ -23,21 +27,13 @@
           </svg>
         </div>
         <div class="menu-area">
-          <button>Sport</button>
-          <button>Tech</button>
-          <button>World</button>
-          <button>Finance</button>
-          <button>Politics</button>
           <button>Business</button>
-          <button>Economics</button>
           <button>Entertainment</button>
-          <button>Beauty</button>
-          <button>Travel</button>
-          <button>Music</button>
-          <button>Food</button>
+          <button>General</button>
+          <button>Health</button>
           <button>Science</button>
-          <button>Gaming</button>
-          <button>Energy</button>
+          <!-- <button>Sports</button> -->
+          <button>Technology</button>
         </div>
       </section>
       <section id="news-board">
