--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/2c827c8cca.js" crossorigin="anonymous"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,9 +16,11 @@
   <body>
     <section class="container">
       <section>
-        <div>
-          <input id="search-input" type="text"/>
-          <button onclick="getNewsByKeyword()">search</button>
+        <div class="search-area">
+          <i class="fa-solid fa-bars mobile-menu-toggle"></i>
+          <i class="fa-solid fa-magnifying-glass search-icon" onclick="clickSearch()"></i>
+          <input class="hidden-search" id="search-input" type="text"/>
+          <button class="hidden-search" onclick="getNewsByKeyword()">search</button>
         </div>
         <div class="head-line">
           <svg viewBox="0 0 184 25" fill="#000">
@@ -27,6 +30,7 @@
           </svg>
         </div>
         <div class="menu-area">
+          <i class="fa-solid fa-xmark mobile-menu-close"></i>
           <button>Business</button>
           <button>Entertainment</button>
           <button>General</button>
