🚧 비동기함수 관련 소스 수정중

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <button>General</button>
           <button>Health</button>
           <button>Science</button>
-          <!-- <button>Sports</button> -->
+          <button>Sports</button>
           <button>Technology</button>
         </div>
       </section>
